--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -4,13 +4,9 @@
 
 <ng-container *ngIf="!isLoading">
 
-  <div *ngFor="let element of catalog.categorie">
 
     <app-service-view
-    [categorie]="element"></app-service-view>
-
-
-  </div>
+    [catalog]="catalog"></app-service-view>
 
 
 </ng-container>
