--- a/src/app/component/service-view/service-view.component.html
+++ b/src/app/component/service-view/service-view.component.html
@@ -1,18 +1,21 @@
 <ng-container>
-<h1>{{categorie.name}}</h1>
+<!-- <h1>{{chips.nom}} - {{chips.marque}}</h1> -->
 
-  <button mat-raised-button color="primary" (click)="createProduct()">Créer un produit</button>
-  <table mat-table [dataSource]="categorie.produits" class="mat-elevation-z8">
+  <!-- <button mat-raised-button color="primary" (click)="createNote()">Créer une note</button> -->
+  <table mat-table [dataSource]="catalog.chips" class="mat-elevation-z8">
 
     <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef> Nom </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
     </ng-container>
-
-    <!-- Name Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.marque}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="note">
+      <th mat-header-cell *matHeaderCellDef> Note de la chips </th>
+      <td mat-cell *matCellDef="let element"><a (click)="showNote(element)"><i class="fa fa-show"></i></a> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
