--- a/src/app/component/service-view/service-view.component.html
+++ b/src/app/component/service-view/service-view.component.html
@@ -1,6 +1,5 @@
-<ng-container>
-<!-- <h1>{{chips.nom}} - {{chips.marque}}</h1> -->
 
+<ng-container>
   <!-- <button mat-raised-button color="primary" (click)="createNote()">Créer une note</button> -->
   <table mat-table [dataSource]="catalog.chips" class="mat-elevation-z8">
 
@@ -8,14 +7,14 @@
       <th mat-header-cell *matHeaderCellDef> Nom </th>
       <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
     </ng-container>
-    <ng-container matColumnDef="description">
+    <ng-container matColumnDef="marque">
       <th mat-header-cell *matHeaderCellDef> Description </th>
       <td mat-cell *matCellDef="let element"> {{element.marque}} </td>
     </ng-container>
 
     <ng-container matColumnDef="note">
       <th mat-header-cell *matHeaderCellDef> Note de la chips </th>
-      <td mat-cell *matCellDef="let element"><a (click)="showNote(element)"><i class="fa fa-show"></i></a> </td>
+      <td mat-cell *matCellDef="let element"><button mat-button (click)="openDialog(element)"><app-icon-overview-example></app-icon-overview-example>  </button></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
