--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -5,8 +5,7 @@
 <ng-container *ngIf="!isLoading">
 
 
-    <app-service-view
-    [catalog]="catalog"></app-service-view>
+    <app-service-view [catalog]="catalog"></app-service-view>
 
 
 </ng-container>
