--- a/src/app/component/service-view/service-view.component.html
+++ b/src/app/component/service-view/service-view.component.html
@@ -1,20 +1,26 @@
 
 <ng-container>
-  <!-- <button mat-raised-button color="primary" (click)="createNote()">Créer une note</button> -->
   <table mat-table [dataSource]="catalog.chips" class="mat-elevation-z8">
 
     <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef> Nom </th>
+      <th mat-header-cell *matHeaderCellDef> Goût </th>
       <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
     </ng-container>
     <ng-container matColumnDef="marque">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <th mat-header-cell *matHeaderCellDef> Marque </th>
       <td mat-cell *matCellDef="let element"> {{element.marque}} </td>
     </ng-container>
 
     <ng-container matColumnDef="note">
-      <th mat-header-cell *matHeaderCellDef> Note de la chips </th>
-      <td mat-cell *matCellDef="let element"><button mat-button (click)="openDialog(element)"><app-icon-overview-example></app-icon-overview-example>  </button></td>
+      <th mat-header-cell *matHeaderCellDef> Note de la chips</th>
+      <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="openDialogNote(element.note)"><i class="fa-solid fa-info"></i></button></td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button>
+      <button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-regular fa-pen-to-square"></i></button>
+      <button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-solid fa-trash"></i></button></td>          
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
