--- a/src/app/component/dialog-note/dialog-note.component.html
+++ b/src/app/component/dialog-note/dialog-note.component.html
@@ -1,10 +1,10 @@
 <div mat-dialog-content>
   <h1><p>Note de la Chips</p></h1>
-    <h2>Reproduction du goût :</h2> {{data.note.reproductionGout}}
-    <h2>Originalité : </h2>{{data.note.originalite}}<br>
-    <h3>Addictivité : </h3>{{data.note.addictivite}}<br>
-    <h3>Bonus : </h3>{{data.note.bonus}}<br>
-    <h3>Note Finale : </h3>{{data.note.note}}<br>
+    <h2>Reproduction du goût : {{data.note.reproductionGout}}</h2>
+    <h2>Originalité : {{data.note.originalite}}</h2>
+    <h2>Addictivité : {{data.note.addictivite}}</h2>
+    <h2>Bonus : {{data.note.bonus}}</h2>
+    <h2>Note Finale :</h2>{{data.note.note}}
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Ok</button>
