--- a/src/app/component/service-view/service-view.component.html
+++ b/src/app/component/service-view/service-view.component.html
@@ -20,7 +20,7 @@
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button>
       <button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-regular fa-pen-to-square"></i></button>
-      <button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-solid fa-trash"></i></button></td>          
+      <button mat-raised-button color="primary" (click)="openDialogDelete(element)"><i class="fa-solid fa-trash"></i></button></td>          
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
