--- a/src/app/component/dialog-note/dialog-note.component.html
+++ b/src/app/component/dialog-note/dialog-note.component.html
@@ -3,8 +3,10 @@
     <h2>Reproduction du goût : {{data.note.reproductionGout}}</h2>
     <h2>Originalité : {{data.note.originalite}}</h2>
     <h2>Addictivité : {{data.note.addictivite}}</h2>
+    <h2>Ressenti : {{data.note.ressenti}}</h2>
     <h2>Bonus : {{data.note.bonus}}</h2>
-    <h2>Note Finale :</h2>{{data.note.note}}
+    <h2>Note Finale :</h2>
+    <h2>{{data.note.note}}</h2>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Ok</button>
