--- a/src/app/component/service-view/service-view.component.html
+++ b/src/app/component/service-view/service-view.component.html
@@ -1,7 +1,8 @@
 
 <ng-container>
+  <br><br>
   <h1><p> Ajouter une Chips : <button mat-raised-button color="primary" (click)="openDialogCreate()"><i class="fa-solid fa-plus"></i></button></p></h1>
-  <table mat-table [dataSource]="catalog.chips" class="mat-elevation-z8">
+  <br><table mat-table [dataSource]="catalog.chips" class="mat-elevation-z8">
 
     <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef> Goût </th>
@@ -14,13 +15,15 @@
 
     <ng-container matColumnDef="note">
       <th mat-header-cell *matHeaderCellDef> Note de la chips</th>
-      <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="openDialogNote(element.note)"><i class="fa-solid fa-info"></i></button></td>
+      <td mat-cell *matCellDef="let element">
+      <button mat-raised-button color="primary" (click)="openDialogNote(element.note)"><i class="fa-solid fa-info"></i></button>
+      <button mat-raised-button color="primary" (click)="openDialogUpdateNote(element)"><i class="fa-regular fa-pen-to-square"></i></button></td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-      <button mat-raised-button color="primary" (click)="openDialog()"><i class="fa-regular fa-pen-to-square"></i></button>
+      <button mat-raised-button color="primary" (click)="openDialogUpdate(element)"><i class="fa-regular fa-pen-to-square"></i></button>
       <button mat-raised-button color="primary" (click)="openDialogDelete(element)"><i class="fa-solid fa-trash"></i></button></td>          
     </ng-container>
 
