--- a/src/app/component/dialog-note/dialog-note.component.html
+++ b/src/app/component/dialog-note/dialog-note.component.html
@@ -1,10 +1,10 @@
 <div mat-dialog-content>
   <h1><p>Note de la Chips</p></h1>
-    <h2>Reproduction du goût : {{data.note.reproductionGout}}</h2>
-    <h2>Originalité : {{data.note.originalite}}</h2>
-    <h2>Addictivité : {{data.note.addictivite}}</h2>
-    <h2>Ressenti : {{data.note.ressenti}}</h2>
-    <h2>Bonus : {{data.note.bonus}}</h2>
+    <h2>Reproduction du goût : {{data.note.reproductionGout}}/4</h2>
+    <h2>Originalité : {{data.note.originalite}}/3</h2>
+    <h2>Addictivité : {{data.note.addictivite}}/6</h2>
+    <h2>Ressenti : {{data.note.ressenti}}/7</h2>
+    <h2>Bonus : {{data.note.bonus}}/2</h2>
     <h2>Note Finale :</h2>
     <h2>{{data.note.note}}</h2>
 </div>
