--- a/src/app/component/dialog-update-note/dialog-update-note.component.html
+++ b/src/app/component/dialog-update-note/dialog-update-note.component.html
@@ -4,31 +4,31 @@
         <form class="form-create" (ngSubmit)="onSendClick()">
         <p>
         <mat-form-field appearance="outline">
-            <mat-label>Reproduction du goût</mat-label>
+            <mat-label>Reproduction du goût /6</mat-label>
             <input matInput placeholder={{data.chips.note.reproductionGout}} name="reproductionGout" required [(ngModel)]="reproductionGout">
         </mat-form-field>
         </p>
         <p>
         <mat-form-field appearance="outline">
-            <mat-label>Originalité</mat-label>
+            <mat-label>Originalité /3</mat-label>
             <input matInput placeholder={{data.chips.note.originalite}} name="originalite" required [(ngModel)]="originalite">
         </mat-form-field>
         </p>
         <p>
         <mat-form-field appearance="outline">
-            <mat-label>Addictivité</mat-label>
+            <mat-label>Addictivité /6</mat-label>
             <input matInput placeholder={{data.chips.note.addictivite}} name="addictivite" required [(ngModel)]="addictivite">
         </mat-form-field>
         </p>
         <p>
         <mat-form-field appearance="outline">
-            <mat-label>Ressenti</mat-label>
+            <mat-label>Ressenti /7</mat-label>
             <input matInput placeholder={{data.chips.note.ressenti}} name="ressenti" required [(ngModel)]="ressenti">
         </mat-form-field>
         </p>
         <p>
         <mat-form-field appearance="outline">
-            <mat-label>Bonus</mat-label>
+            <mat-label>Bonus /2</mat-label>
             <input matInput placeholder={{data.chips.note.bonus}} name="bonus" required [(ngModel)]="bonus">
         </mat-form-field>
         </p>
